# Learning-Platform

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
src/: db.sqlite3  manage.py  test_topic_generator.py
src/learningPlatform/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/lessons/: admin.py  ai_lesson_generator.py  ai_topic_generator.py  models.py  urls.py  views.py
src/lessons/migrations/: 0001_initial.py  0002_alter_lesson_lesson_content.py  0003_lesson_lesson_completed.py  0004_remove_lesson_lesson_completed.py  0005_topic_error_message_topic_status.py  0006_alter_topic_error_message_alter_topic_status.py  0007_alter_topic_error_message_alter_topic_status.py  0008_remove_topic_error_message_remove_topic_status_and_more.py  0009_topic_status_alter_topic_subject.py
src/lessons/templates/: lesson_detail.html  topic_detail.html  topic_list.html
src/users/: admin.py  ai_question_generator.py  assessment_data.py  forms.py  models.py  urls.py  views.py
src/users/migrations/: 0001_initial.py  0002_difficultyquestions_and_more.py  0003_difficultyquestions_status.py  0004_remove_difficultyquestions_status.py  0005_learningprofile_difficulty_assessment_ready.py  0006_remove_learningprofile_hands_on_learning_score_and_more.py  0007_alter_difficultyquestions_subject_and_more.py
src/users/templates/: assessment.html  base.html  difficulty_assessment.html  homepage.html  level_choice.html  login.html  next_topic.html  signup.html  (+5 more)
src/utils/: config.py  context_processors.py
(+1 files in other folders)
