[project]
name = "learning-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.5.3",
    "django>=5.2.6",
    "dotenv>=0.9.9",
    "groq>=0.31.1",
    "markdown>=3.9",
    "markdown2>=2.5.4",
    "psycopg2>=2.9.11",
    "redis>=6.4.0",
]
